# daemon01

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  cmake_uninstall.cmake.in
.github/workflows/: ci.yml
cmake/: FetchGTest.cmake
inc/: config.hpp  daemon.hpp
resources/: default.conf  default_config.json
src/: CMakeLists.txt  _daemon.cpp  config.cpp  daemon.cpp  main.cpp
tests/: CMakeLists.txt  test_config.cpp  test_daemon.cpp
tools/: .clang-format  format-all.sh  install-hooks.sh  pre-commit.sh  run-clang-tidy.sh
